High contrast fixes for dashboard

--- a/vtr-ui/src/app/components/menu-main/menu-main.component.scss
+++ b/vtr-ui/src/app/components/menu-main/menu-main.component.scss
@@ -203,6 +203,12 @@
             margin-top: -1rem;
             padding: 2.5rem 1.5rem;
             transform: translateX(0%);
+            @media #{$black-on-white}{
+              background: $high-contrast-grey;
+            }
+            @media #{$white-on-black}{
+              background: $high-contrast-grey;
+            }
             //left: 50%;
             // min-width: 22.5rem;
 
@@ -228,7 +234,13 @@
 								color: $light;
 								font-size: 3rem;
 								transform: rotate(45deg);
-								z-index: 0;
+                z-index: 0;
+                @media #{$black-on-white}{
+                  color: $high-contrast-grey;
+                }
+                @media #{$white-on-black}{
+                  color: $high-contrast-grey;
+                }
 							}
 						}
 
@@ -292,6 +304,12 @@
               }
               &.user {
                 padding-right: 5.2rem;
+                @media #{$black-on-white} {
+                  background: $high-contrast-grey;
+                }
+                @media #{$white-on-black} {
+                  background: $high-contrast-grey;
+                }
                 @media #{$mediaquery_9} {
                   padding-right: 4.2rem;
                 }
