--- a/vtr-ui/src/app/components/widgets/widget-legion-edge/widget-legion-edge.component.scss
+++ b/vtr-ui/src/app/components/widgets/widget-legion-edge/widget-legion-edge.component.scss
@@ -94,7 +94,7 @@
 										color: $gaming_lightest;
 									}
 									@media #{$white-on-black} {
-										color: $gaming_darkest;
+										color: $gaming_lightest;
 									}
 									&::after {
 										content: "";
