--- a/vtr-ui/src/app/components/widgets/widget-quicksettings-list/widget-quicksettings-list.component.scss
+++ b/vtr-ui/src/app/components/widgets/widget-quicksettings-list/widget-quicksettings-list.component.scss
@@ -70,7 +70,7 @@
 										color: $gaming_lightest;
 									}
 									@media #{$white-on-black} {
-										color: $gaming_darkest;
+										color: $gaming_lightest;
 									}
 									&::after{
 										content: '';
